# routes/api.php
@@ -32,5 +32,6 @@ Route::resource('accounts','App\Http\Controllers\CuentasCorrienteController',['e
 Route::get('familia/childrens/{id}',[App\Http\Controllers\FamiliumController::class, 'showByUserId']);
 Route::resource('familia','App\Http\Controllers\FamiliumController',['except' => ['create','edit']])->parameters(['familia' => 'id']);
 Route::resource('salario','App\Http\Controllers\SalarioController',['except' => ['create','edit']])->parameters(['salario' => 'id']);
+Route::get('salario/usuario/{id}',[App\Http\Controllers\SalarioController::class, 'showByUserId']);
 Route::resource('telefono','App\Http\Controllers\TelefonoController',['except' => ['create','edit']])->parameters(['telefono' => 'id']);
 Route::resource('tipo-telefono','App\Http\Controllers\TipoTelefonoController',['except' => ['create','edit']])->parameters(['tipo-telefono' => 'tipo']);
